force-app/main/default/objects/Pricing_Exception__e/Pricing_Exception__e.object-meta.xml
<CustomObject>
    <description>D-18 pricing-hook exception carrier. Published (Publish Immediately) from a hook catch block so a swallowed degrade survives rollback; a subscriber Flow persists it to Exception_Log__c (RecordType "Pricing Exception"). See docs/pricing-refactor/D18_TELEMETRY_DESIGN.md.</description>
    <label>Pricing Exception</label>
    <pluralLabel>Pricing Exceptions</pluralLabel>
</CustomObject>