force-app/main/default/objects/Pricing_Exception__e/fields/Hook_Phase__c.field-meta.xml
<CustomField>
    <fullName>Hook_Phase__c</fullName>
    <label>Hook Phase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>