force-app/main/default/objects/Pricing_Exception__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>